0.6.0
    * publish if the imu is calibrated or not in the info json
0.5.0
    * add an fft pipe
0.4.2
    * add sleep to systemd service file
0.4.1
    * move to new rc_math timestamp filter for 42688p
0.4.0
    * enable AAF for Accel
    * enable notch for Gyro
    * lower AAF cutoff for gyro
0.3.1
    * move to RT FIFO scheduler
0.3.0
    * improve behavior if 42688 FIFO overflows
0.2.4
    * fix accel calibration scale
0.2.3
    * tune timestamp output based on VIO data
0.2.2
    * remove unnecessary warning from calibrate tool
    * calibrate temp tool increase stress threads to 8
0.2.1
    * remove unnecessary check for old imu_app service
0.2.0
    * rename imu0 to imu_apps, new header
0.1.2
    * fix for imu self test, only enable the 1 onboard imu by default
0.1.1
    * config file + compiler warn fixes
0.1.0
    * first release